// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextArea" renders 1`] = `
<div
  css={[Function]}
>
  <textarea
    className="textarea"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as disabled 1`] = `
<div
  css={[Function]}
>
  <textarea
    className="textarea"
    disabled={true}
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as invalid 1`] = `
<div
  css={[Function]}
>
  <textarea
    className="textarea"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders with placeholderTextTransform 1`] = `
<div
  css={[Function]}
>
  <textarea
    className="textarea"
    placeholder="TextArea"
  >
    TextArea
  </textarea>
</div>
`;
